--- a/twic.html
+++ b/twic.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/x-icon" href="../../../twic.ico">
-    <link rel="stylesheet" type="text/css" href="twic.css">
-    <script type="text/javascript" src="../../../lib/d3.min.js"></script>
-    <script type="text/javascript" src="../../../lib/queue.min.js"></script>
-    <script type="text/javascript" src="twic_lib.min.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="twic.ico">
+    <link rel="stylesheet" type="text/css" href="css/twic.css">
+    <script type="text/javascript" src="lib/d3.min.js"></script>
+    <script type="text/javascript" src="lib/queue.min.js"></script>
+    <script type="text/javascript" src="lib/twic_lib.min.js"></script>
   </head>
   <body>
-    <script type="text/javascript" src="twic.js"></script>
+    <script type="text/javascript" src="code/js/twic.js"></script>
   </body>
 </html>
 
