Removing textFlow, class_syntax, and svg_helper_functions JS from twic_lib.min

--- a/twic.html
+++ b/twic.html
@@ -5,7 +5,14 @@
     <link rel="stylesheet" type="text/css" href="css/twic.css">
     <script type="text/javascript" src="lib/d3.min.js"></script>
     <script type="text/javascript" src="lib/queue.min.js"></script>
-    <script type="text/javascript" src="lib/twic_lib.min.js"></script>
+    <script type="text/javascript" src="lib/textFlow.js"></script>
+    <script type="text/javascript" src="lib/svg_helper_functions.js"></script>
+    <script type="text/javascript" src="lib/class_syntax.js"></script>
+
+    <script type="text/javascript" src="code/js/twic_level.js"></script>
+    <script type="text/javascript" src="code/js/twic_panel.js"></script>
+    <script type="text/javascript" src="code/js/twic_datashape.js"></script>
+    <!-- <script type="text/javascript" src="lib/twic_lib.min.js"></script>-->
   </head>
   <body>
     <script type="text/javascript" src="code/js/twic.js"></script>
