Adding initial multi-orientation control bar for descriptive text & panel controls (part of github #23), generalizing palette used by TWiC, CorpusView now has a control bar at the top of its panel

--- a/twic.html
+++ b/twic.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="lib/svg_helper_functions.js"></script>
     <script type="text/javascript" src="lib/class_syntax.js"></script>
 
+    <script type="text/javascript" src="code/js/twic_control.js"></script>
     <script type="text/javascript" src="code/js/twic_level.js"></script>
     <script type="text/javascript" src="code/js/twic_panel.js"></script>
     <script type="text/javascript" src="code/js/twic_datashape.js"></script>
