Tweaks for CSDH2015 demo

--- a/twic.html
+++ b/twic.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="lib/textFlow.js"></script>
     <script type="text/javascript" src="lib/svg_helper_functions.js"></script>
     <script type="text/javascript" src="lib/class_syntax.js"></script>
+    <script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
     <script type="text/javascript" src="code/js/twic_control.js"></script>
     <script type="text/javascript" src="code/js/twic_level.js"></script>
@@ -17,7 +19,7 @@
     <!-- <script type="text/javascript" src="lib/twic_lib.min.js"></script> -->
   </head>
   <body>
-    <script type="text/javascript" src="code/js/twic.js"></script>
+    <script type="text/javascript" src="code/js/twic_csdh.js"></script>
   </body>
 </html>
 
