--- a/twic.html
+++ b/twic.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/x-icon" href="twic.ico">
     <link rel="stylesheet" type="text/css" href="css/twic.css">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Podkova:400|Inconsolata:400,700">
     <script type="text/javascript" src="lib/d3.min.js"></script>
     <script type="text/javascript" src="lib/d3-tip.js"></script>
     <script type="text/javascript" src="lib/queue.min.js"></script>
@@ -10,7 +11,9 @@
     <script type="text/javascript" src="lib/svg_helper_functions.js"></script>
     <script type="text/javascript" src="lib/class_syntax.js"></script>
     <script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script type="text/javascript" src="lib/jquery-ui.js"></script>
+    <script type="text/javascript" src="lib/packery.pkgd.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
 
     <script type="text/javascript" src="code/js/twic_control.js"></script>
     <script type="text/javascript" src="code/js/twic_level.js"></script>
@@ -19,7 +22,7 @@
     <!-- <script type="text/javascript" src="lib/twic_lib.min.js"></script> -->
   </head>
   <body>
-    <script type="text/javascript" src="code/js/twic_csdh.js"></script>
+    <script type="text/javascript" src="code/js/twic.js"></script>
   </body>
 </html>
 
